<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    tools:context=".employer.NewCompanyFragment"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:layout_centerInParent="true"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          >

        <!-- company name -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            >
          <TextView
              android:id="@+id/companyNameLabel"
              android:text="@string/label_company_name"
              style="@style/titleTextView"
              />

          <EditText
              android:id="@+id/companyNameTv"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/companyNameLabel"
              android:layout_margin="8dp"
              android:background="@drawable/background_with_border"
              android:gravity="right|center_vertical"
              android:hint="@string/hint_company_name"
              android:maxLines="1"
              android:minHeight="50dp"
              android:padding="5dp"
              />

        </RelativeLayout>

        <!-- city name -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            >
          <TextView
              android:id="@+id/cityLabel"
              android:text="@string/label_city_name"
              style="@style/titleTextView"
              />

          <EditText
              android:id="@+id/cityNameTv"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/cityLabel"
              android:layout_margin="8dp"
              android:background="@drawable/background_with_border"
              android:gravity="right|center_vertical"
              android:hint="@string/hint_city_name"
              android:maxLines="1"
              android:minHeight="50dp"
              android:padding="5dp"
              />

        </RelativeLayout>

        <!-- workerCount -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            >
          <TextView
              android:id="@+id/workerCountLabel"
              android:text="@string/label_worker_count"
              style="@style/titleTextView"
              />

          <com.isapanah.awesomespinner.AwesomeSpinner
              android:id="@+id/workerCountSp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/workerCountLabel"
              android:layout_margin="8dp"
              android:background="@drawable/background_with_border"
              app:spinnerDirection="rtl"
              app:spinnerHint=" "
              />

        </RelativeLayout>


        <!-- webSite -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            >
          <TextView
              android:id="@+id/webSite"
              android:text="@string/label_webSite"
              style="@style/titleTextView"
              />

          <EditText
              android:id="@+id/webSiteTv"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/webSite"
              android:layout_margin="8dp"
              android:background="@drawable/background_with_border"
              android:gravity="right|center_vertical"
              android:hint="@string/hint_web_site"
              android:inputType="textWebEditText"
              android:maxLines="1"
              android:minHeight="50dp"
              android:padding="5dp"
              />

        </RelativeLayout>

        <!-- Desc -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            >
          <TextView
              android:id="@+id/desc"
              android:text="@string/label_desc"
              style="@style/titleTextView"
              />

          <EditText
              android:id="@+id/descTv"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/desc"
              android:layout_margin="8dp"
              android:background="@drawable/background_with_border"
              android:gravity="right"
              android:hint="@string/label_desc"
              android:inputType="textWebEditText"
              android:maxLines="4"
              android:minHeight="80dp"
              android:padding="5dp"
              />

        </RelativeLayout>

      </LinearLayout>
    </android.support.v7.widget.CardView>
  </RelativeLayout>
</android.support.v4.widget.NestedScrollView>